--- a/.github/workflows/aaa.yml
+++ b/.github/workflows/aaa.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest     
     steps:         
       - name: Install dependencies
-        run: npm ci     
+        run: npm install     
 
       - name: building    
         run: npm run build    
