--- a/.github/workflows/aaa.yml
+++ b/.github/workflows/aaa.yml
@@ -4,11 +4,14 @@ jobs:
   deploy:     
     runs-on: ubuntu-latest     
     steps:         
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Install dependencies
         run: npm install     
 
-      - name: building    
+      - name: Build app
         run: npm run build    
 
-      - name: test      
+      - name: Test step      
         run: echo "work"
